homonginize input styles

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -10,6 +10,9 @@
   /* FONTS */
   --ft-header: 'Montserrat', sans-serif;
   --ft-body: 'Montserrat', sans-serif;
+
+  /* OTHER */
+  --br-default: 5px;
 }
 
 /* GLOBAL STYLES */
